--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.joaquin.storyteller">
+    package="com.joaquin.storyteller" >
 
     <application
         android:allowBackup="true"
@@ -12,13 +12,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StoryTeller"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".AddPictureActivity"
+            android:exported="false" />
         <activity
             android:name=".SlideshowListActivity"
             android:exported="false" />
         <activity
             android:name=".GalleryActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
